--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,8 @@ services:
       POSTGRES_USER: user
       POSTGRES_PASSWORD: password
       POSTGRES_DB: orderdb
+    ports:
+      - "5432:5432"
 
   zipkin:
     image: openzipkin/zipkin
